<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Loyalty"
            android:icon="@drawable/reward"
            android:title="@string/Nav_Loyalty"/>
        <item
            android:id="@+id/nav_coupons"
            android:icon="@drawable/coupon"
            android:title="@string/menu_coupons" />
        <item
            android:id="@+id/nav_LeagueStandings"
            android:icon="@drawable/standings"
            android:title="@string/NavStandings" />
        <item
            android:id="@+id/nav_LeagueSignUp"
            android:icon="@drawable/signup"
            android:title="@string/NavSignUp" />
        <item
            android:id="@+id/nav_PartyPackages"
            android:icon="@drawable/party"
            android:title="Party Packages"/>
    </group>


</menu>
